--- a/feature_compare.css
+++ b/feature_compare.css
@@ -20,6 +20,8 @@
     float: right;
     z-index: 1;
     color: black;
+    margin-top: -2px;
+    margin-right: 2px;
 }
 
 .comparer-feature li, .comparer-feature-fields li {
